--- a/sources/Wotstat.Application/packages.config
+++ b/sources/Wotstat.Application/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Infrastructure.Domain" version="1.1.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net45" />
