--- a/sources/Wotstat/packages.config
+++ b/sources/Wotstat/packages.config
@@ -6,6 +6,15 @@
   <package id="Castle.Core" version="2.5.2" targetFramework="net45" />
   <package id="Castle.Windsor" version="2.5.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="FluentMigrator" version="1.1.2.1" targetFramework="net45" />
+  <package id="FluentMigrator.Runner" version="1.1.1.26" targetFramework="net45" />
+  <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net45" />
+  <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net45" />
+  <package id="Infrastructure.Common" version="1.0.13.0" targetFramework="net45" />
+  <package id="Infrastructure.Domain" version="1.1.0" targetFramework="net45" />
+  <package id="Infrastructure.NHibernate" version="1.0.13.0" targetFramework="net45" />
+  <package id="Infrastructure.NHibernate.Conventions" version="1.0.13.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
@@ -36,6 +45,7 @@
   <package id="NArms.AutoMapper" version="1.1.1.0" targetFramework="net45" />
   <package id="NArms.Windsor" version="1.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
