--- a/sources/Wotstat/packages.config
+++ b/sources/Wotstat/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
+  <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="Castle.Core" version="2.5.2" targetFramework="net45" />
-  <package id="Castle.Windsor" version="2.5.4" targetFramework="net45" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
+  <package id="Castle.FactorySupportFacility" version="3.2.0" targetFramework="net45" />
+  <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="FluentMigrator" version="1.1.2.1" targetFramework="net45" />
   <package id="FluentMigrator.Runner" version="1.1.1.26" targetFramework="net45" />
@@ -41,7 +42,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MvcExtensions" version="2.5.4" targetFramework="net45" />
-  <package id="MvcExtensions.Windsor" version="2.5.0" targetFramework="net45" />
+  <package id="MvcExtensions.Windsor3" version="2.5.0" targetFramework="net45" />
   <package id="NArms.AutoMapper" version="1.1.1.0" targetFramework="net45" />
   <package id="NArms.Windsor" version="1.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
