add search account by name, by playerId

--- a/sources/Domain.DataAccess/Domain.DataAccess.csproj
+++ b/sources/Domain.DataAccess/Domain.DataAccess.csproj
@@ -67,6 +67,8 @@
   <ItemGroup>
     <Compile Include="NHibernateInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\FindAccountByName.cs" />
+    <Compile Include="Queries\FindAccountByPlayerIdQuery.cs" />
     <Compile Include="Repositories\SourcedNHibernateRepository.cs" />
     <Compile Include="Sources\NHibernate\Conventions\ColumnNameConvention.cs" />
     <Compile Include="Sources\NHibernate\Conventions\EntityMapConvention.cs" />
