--- a/sources/Wotstat.Application/packages.config
+++ b/sources/Wotstat.Application/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
+  <package id="Castle.Core" version="2.5.2" targetFramework="net45" />
+  <package id="Castle.Windsor" version="2.5.4" targetFramework="net45" />
   <package id="Infrastructure.Domain" version="1.1.0" targetFramework="net45" />
   <package id="Infrastructure.Web" version="1.0.13.0" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
@@ -17,6 +19,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Mvc3Futures" version="3.0.20105.0" targetFramework="net45" />
   <package id="NArms.AutoMapper" version="1.1.1.0" targetFramework="net45" />
+  <package id="NArms.Windsor" version="1.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
