rename tables StatisticalDatas and DynamicDatas

--- a/sources/Domain.Model/Domain.Model.csproj
+++ b/sources/Domain.Model/Domain.Model.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Criteria\AccountPlayerIdCriterion.cs" />
     <Compile Include="Entities\DynamicData.cs" />
     <Compile Include="Entities\Period.cs" />
-    <Compile Include="Entities\StatisticData.cs" />
+    <Compile Include="Entities\StatisticalData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
