--- a/sources/Migrations/Migrations.csproj
+++ b/sources/Migrations/Migrations.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Changesets\Migration201402041101.cs" />
+    <Compile Include="Changesets\Migration201402051648.cs" />
+    <Compile Include="Changesets\Migration201402051642.cs" />
     <Compile Include="Changesets\Migration201402051429.cs" />
     <Compile Include="Changesets\Migration201402051231.cs" />
     <Compile Include="Changesets\Migration201402041634.cs" />
