--- a/sources/Wotstat.Application/Wotstat.Application.csproj
+++ b/sources/Wotstat.Application/Wotstat.Application.csproj
@@ -44,8 +44,9 @@
     <Reference Include="ByndyuSoft.Infrastructure.Web">
       <HintPath>..\..\packages\Infrastructure.Web.1.0.13.0\lib\net40\ByndyuSoft.Infrastructure.Web.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.Core">
-      <HintPath>..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
+    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Castle.Core.3.2.2\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\packages\Castle.Windsor.2.5.4\lib\net40\Castle.Windsor.dll</HintPath>
