--- a/sources/Domain.Model/Domain.Model.csproj
+++ b/sources/Domain.Model/Domain.Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Criteria\PlayerIdAndDateCriterion.cs" />
     <Compile Include="Criteria\PlayerIdAndPeriodCriterion.cs" />
     <Compile Include="Criteria\StatisticSearchCriterion.cs" />
+    <Compile Include="Criteria\StatisticSearchPeriodCriterion.cs" />
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Criteria\AccountNameCriterion.cs" />
     <Compile Include="Criteria\AccountPlayerIdCriterion.cs" />
