Refactoring Add release config files

--- a/sources/Crawler/App.config
+++ b/sources/Crawler/App.config
@@ -1,6 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="RabbitMq" value="amqp://rHOpc0aT:S5zHHJg-5T3DllLYW1sbs2VP_ykij6kv@furry-silver-3.bigwig.lshift.net:10748/9lQ2glyb8KmP" />
+    <add key="ApplicationId" value="171745d21f7f98fd8878771da1000a31" />
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Windsor" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
