--- a/sources/Wotstat/Web.config
+++ b/sources/Wotstat/Web.config
@@ -5,12 +5,12 @@
     <add name="Main" connectionString="Server=localhost;Database=Wotstat;User Id=Wotstat;Password=Wotstat" />
   </connectionStrings>
   <appSettings>
+    <add key="RabbitMq" value="amqp://localhost" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ApplicationId" value="171745d21f7f98fd8878771da1000a31"/>
-    <add key="OAuthUrl" value="https://api.worldoftanks.ru/wot/auth/login/"/>
+    <add key="ApplicationId" value="171745d21f7f98fd8878771da1000a31" />
   </appSettings>
   <system.web>
      <authentication mode="Forms">
