--- a/sources/Calc.Run/App.config
+++ b/sources/Calc.Run/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+  <appSettings>
+    <add key="RabbitMq" value="amqp://localhost" />
+  </appSettings>
   <connectionStrings>
     <clear />
     <add name="Main" connectionString="Server=localhost;Database=Wotstat;User Id=Wotstat;Password=Wotstat" />
