--- a/sources/Crawler/packages.config
+++ b/sources/Crawler/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
+  <package id="Castle.FactorySupportFacility" version="3.2.0" targetFramework="net45" />
+  <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
   <package id="EasyNetQ" version="0.26.3.203" targetFramework="net45" />
+  <package id="NArms.Windsor" version="1.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.1.5" targetFramework="net45" />
 </packages>
