--- a/sources/Wotstat.Application/Wotstat.Application.csproj
+++ b/sources/Wotstat.Application/Wotstat.Application.csproj
@@ -148,13 +148,11 @@
     <Compile Include="Accounts\Profiles\AccountProfile.cs" />
     <Compile Include="Accounts\ViewModels\UserResponseModel.cs" />
     <Compile Include="Boilerplate\Extensions\Web\UrlHelperExtensions.cs" />
-    <Compile Include="Boilerplate\Extensions\Web\HtmlHelperConfigExtensions.cs" />
     <Compile Include="Boilerplate\Extensions\Web\HtmlHelperAuthExtensions.cs" />
     <Compile Include="Boilerplate\Extensions\Web\HtmlHelperStatisticExtensions.cs" />
-    <Compile Include="Boilerplate\Filters\ConfigAttribute.cs" />
+    <Compile Include="Boilerplate\Filters\OAuthUrlAttribute.cs" />
     <Compile Include="Boilerplate\Filters\ContextAccountAttribute.cs" />
-    <Compile Include="Enviroment\Impl\Config.cs" />
-    <Compile Include="Enviroment\IConfig.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Home\HomeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Services\IAuthenticationService.cs" />
@@ -175,6 +173,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\WargamingApi\WargamingApi.csproj">
+      <Project>{e1894f57-e05f-4306-8fb2-479c89bee875}</Project>
+      <Name>WargamingApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Domain.DataAccess\Domain.DataAccess.csproj">
       <Project>{5d0e4e65-909a-4900-b5e1-25da7e1576b8}</Project>
       <Name>Domain.DataAccess</Name>
@@ -432,6 +434,9 @@
     <EmbeddedResource Include="App_GlobalResources\UploadLocalization.pt-PT.resx" />
     <EmbeddedResource Include="App_GlobalResources\UploadLocalization.ru-RU.resx" />
     <EmbeddedResource Include="App_GlobalResources\UploadLocalization.zh-CN.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Enviroment\Impl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
